--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,24 @@
     text-align: center;
 }
 
+.download {
+    background-color: rgb(255, 0, 75);
+    padding: 12px 30px;
+    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    color: whitesmoke;
+}
+
+.download:hover {
+    background-color: rgb(255, 0, 150);
+}
+
+.downloadonewrap {
+    align-self: flex-end;
+    margin-top: 2.5%;
+    margin-right: 10%;
+}
 
 /* ids */
 
@@ -38,7 +56,7 @@
     padding: 10px;
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: auto;
-    margin-bottom: 2.5%;
+    margin-top: 2.5%;
+    margin-bottom: 0.5%;
     border: solid 2px rgb(255, 0, 75);
 }
