--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,15 @@
-/* classes */
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
 
-.main {
+body {
     display: flex;
     flex-direction: column;
-    font-size: medium;
-    font-family: "Comic Sans MS";
-    /*font-family: "Atlas Grotesk Web",sans-serif;*/
-    font-size: 19px;
-    color: whitesmoke;
-    background-color: rgb(24, 26, 27);
 }
 
-.titel {
-    font-size: 60px;
-    text-align: center;
-}
+/* classes */
 
 .download {
     background-color: rgb(255, 0, 75);
@@ -40,6 +35,22 @@
 
 /* ids */
 
+#header {
+    font-size: 60px;
+    text-align: center;
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    font-family: "Comic Sans MS";
+    /*font-family: "Atlas Grotesk Web",sans-serif;*/
+    font-size: 19px;
+    color: whitesmoke;
+    background-color: rgb(24, 26, 27);
+}
+
 #untertitel {
     font-size: large;
     text-align: center;
@@ -58,8 +69,8 @@
 
 #footer {
     padding: 10px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
     margin-top: 2.5%;
     margin-bottom: 0.5%;
     border: solid 2px rgb(255, 0, 75);
