--- a/css/pong.css
+++ b/css/pong.css
@@ -3,10 +3,8 @@
 }
 
 :root {
-    --hue: 200;
-    --saturation: 50%;
-    --foreground-color: hsl(var(--hue), var(--saturation), 75%);
-    --background-color: hsl(var(--hue), var(--saturation), 20%);
+    --foreground-color: rgb(255, 0, 75);
+    --background-color: rgb(24, 26, 27);
 }
 
 body {
