prevented user select

--- a/css/pong.css
+++ b/css/pong.css
@@ -52,6 +52,7 @@ body {
     font-weight: bold;
     font-size: 7vh;
     color: var(--foreground-color);
+    user-select: none;
 }
 
 .score > * {
